--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,3 +7,29 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
     }
+
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+      }
+      
+      /* Hide scrollbar for IE, Edge and Firefox */
+   .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+      }
+  
+      input[type=number] {
+        -moz-appearance: textfield; /* Firefox */
+        appearance: textfield; /* Chrome, Safari, Edge */
+    }
+    
+    input[type=number]::-moz-spin-button,
+    input[type=number]::-moz-textfield-cancel-button {
+        display: none; /* Firefox */
+    }
+    
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+        -webkit-appearance: none; /* Chrome, Safari */
+        margin: 0;
+    }
